--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
           <!-- featured works -->
            <div class="py-3" style="z-index: 0;">
               <div class="container-lg py-5">
+                <div class="text-center mb-5">
+                  <p class="fs-5 text-muted">Guides, Tutorials, and How-Tos for Everyday Tech Problems and Web Development</p>
+                </div>
                 <div class="row m-0">
-                  <div class="col-12">
+                  <div class="col-12 bor">
                     <div class="row pb-3 border-bottom">
                       <div class="col-12">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-0">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">How to convert video using Handbrake</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fw-bold">2025</small></span>
@@ -64,9 +67,9 @@
                             <a href="./blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-5 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">How to Register a Photo/Painting/Digital Illustration as NFT</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -78,9 +81,9 @@
                             <a href="./blog-pages/nft/ntf-setting-blog.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">How to Sell Your Product Through Amazon: What Are the Procedures to Be Done</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -92,9 +95,9 @@
                             <a href="./blog-pages/amazon/how-to-sell-your-product-on-amazon.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">How to Add Webcam Functionality to a Web Page</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -106,9 +109,9 @@
                             <a href="./blog-pages/web-cam-streaming/web-streaming-docs-webrtc.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">How to install ffmpeg in windows</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -120,9 +123,9 @@
                             <a href="./blog-pages/ffmpeg-installation/ffmpeg-installation.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">Embed MP4 Video in HTML whith is stored in Google Drive</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -134,9 +137,9 @@
                             <a href="./blog-pages/use-video-stored-in-drive-on-html/use-video-stored-in-google-drive-in-html.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">Embed Gif in HTML which is stored in Google Drive</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -148,9 +151,9 @@
                             <a href="./blog-pages/embed-gifs-in-html-from-google-drive/embed-gifs-in-html-from-google-drive.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">Set Up Custom domain to github page using Namecheap</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -161,9 +164,9 @@
                             <a href="./blog-pages/deployment/name-cheap/how-to-set-custom-domain-to-github-pages-using-namecheap.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">Affordable WordPress Hosting Options in India (2025) - Full Comparison</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -174,9 +177,9 @@
                             <a href="./blog-pages/wordpress/affordable-wordpress-hosting-in-2025.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">Best Hosting Options for Learning & Experimenting with WordPress</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -187,9 +190,9 @@
                             <a href="./blog-pages/wordpress/learing-and-experimenting-wordpress.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-3">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                        <div class="mt-3 mt-md-4">
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
                           <div class="fw-semibold fs-5">Instagram Algorithm for New Accounts: Tips & Strategy</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
@@ -198,6 +201,19 @@
                             <p class="pe-md-5">
                             </p>
                             <a href="./blog-pages/instagram/instagram-algorithm-for-new-accounts-tips-and-stragegy.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
+                          </div>
+                      </div>
+                      <div class="col-12 mt-3">
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
+                          <div class="fw-semibold fs-5">How to Deploy a Private GitHub Repository with a Custom Domain</div>
+                          <div class="my-2">
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
+                            <span class="text-light ms-2">Web Development/Deployment/Github</span>
+                          </div>
+                            <p class="pe-md-5">
+                            </p>
+                            <a href="./blog-pages/deployment/github/how-to-deploy-private-repository-with-custom-domain.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
                     </div>
