--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@
                 <div class="col-md-6 col-lg-4">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
                   <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
-                    <h3 class="fw-semibold fs-5">How to convert video using
+                    <div class="card-img-container">
+                      <img src="./blog-pages/convert-video-using-handbrake/assets/multimedia-thumbnail.png" class="img-fluid rounded-1" alt="">
+                    </div>
+                    <h3 class="fw-semibold fs-5 mt-2">How to convert video using
                       Handbrake</h3>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
@@ -171,7 +174,10 @@
                                 <div class="col-md-6 col-lg-4">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
                   <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm shadow-sm">
-                    <div class="fw-semibold fs-5">How to install ffmpeg in
+                    <div class="card-img-container">
+                      <img src="./blog-pages/convert-video-using-handbrake/assets/multimedia-thumbnail.png" class="img-fluid rounded-1" alt="">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-2">How to install ffmpeg in
                       windows</div>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
@@ -193,8 +199,11 @@
                 <div class="row mt-4" v-if="currentTab === 'blockchain'">
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-5 mt-md-0 border p-3 rounded-2 shadow-sm">
-                    <div class="fw-semibold fs-5">How to Register a
+                  <div class="mt-5 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/nft/ntf-setting-blog.html'">
+                     <div class="card-img-container">
+                      <img src="./blog-pages/nft/assets/andrey-metelev-yscrM1AOEKI-unsplash.jpg" class="img-fluid rounded-1" alt="">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-2">How to Register a
                       Photo/Painting/Digital Illustration as NFT</div>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
@@ -214,7 +223,10 @@
                 <div class="row" v-if="currentTab === 'e-commerce'">
                 <div class="col-12 col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/amazon/how-to-sell-your-product-on-amazon.html'">
+                     <div class="card-img-container">
+                      <img src="./blog-pages/amazon/assets/Customer-logo_Amazon-1-1024x512.png.webp" class="img-fluid rounded-1" alt="">
+                    </div>
                     <div class="fw-semibold fs-5">How to Sell Your Product
                       Through Amazon: What Are the Procedures to Be Done</div>
                     <div class="my-2">
@@ -403,7 +415,10 @@
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
                   <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
-                    <div class="fw-semibold fs-5">Instagram Algorithm for New
+                    <div class="card-img-container">
+                      <img src="./blog-pages/instagram/assets/solen-feyissa-KWZa42a1kds-unsplash.jpg" class="img-fluid rounded-1" alt="instagram logo">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-2">Instagram Algorithm for New
                       Accounts: Tips & Strategy</div>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
@@ -424,7 +439,10 @@
                 <div class="col-12 col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
                   <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
-                    <div class="fw-semibold fs-5">Top Free SEO Keyword Analysis
+                    <div class="card-img-container">
+                      <img src="./blog-pages/digital-marketing/assets/merakist-l5if0iQfV4c-unsplash.jpg" class="img-fluid rounded-1" alt="github image">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-4">Top Free SEO Keyword Analysis
                       Tools (2025)</div>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
